# hyper-bump-it

./: .bandit  .flake8  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  renovate.json  requirements-bootstrap.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py  versions.json
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-dist/: action.sh
.github/actions/install-dependencies/: action.sh
.github/actions/verify-wheel/: action.sh  action.yml
.github/workflows/: detect_version_bump.yml  main.yml  publish_release.yml  scorecard.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/changelog/: index.html
0.1.0/getting-started/: index.html
0.1.0/usage-guide/configuration/: index.html
0.1.0/usage-guide/format-patterns/: index.html
0.1.0/usage-guide/git-integration/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/changelog/: index.html
0.2.0/getting-started/: index.html
0.2.0/search/: search_index.json
0.2.0/usage-guide/configuration/: index.html
0.2.0/usage-guide/format-patterns/: index.html
0.2.0/usage-guide/git-integration/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/getting-started/: index.html
0.3.0/search/: search_index.json
0.3.0/usage-guide/configuration/: index.html
0.3.0/usage-guide/format-patterns/: index.html
0.3.0/usage-guide/git-integration/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/changelog/: index.html
0.3.1/getting-started/: index.html
0.3.1/search/: search_index.json
0.3.1/usage-guide/configuration/: index.html
0.3.1/usage-guide/format-patterns/: index.html
0.3.1/usage-guide/git-integration/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/changelog/: index.html
0.4.0/development-guide/: index.html
0.4.0/getting-started/: index.html
0.4.0/search/: search_index.json
0.4.0/usage-guide/configuration/: index.html
0.4.0/usage-guide/format-patterns/: index.html
0.4.0/usage-guide/git-integration/: index.html
0.4.0/why-hyper-bump-it/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/changelog/: index.html
0.4.1/development-guide/: index.html
0.4.1/getting-started/: index.html
0.4.1/usage-guide/configuration/: index.html
0.4.1/usage-guide/format-patterns/: index.html
0.4.1/usage-guide/git-integration/: index.html
0.4.1/why-hyper-bump-it/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/changelog/: index.html
0.5.0/development-guide/: index.html
0.5.0/getting-started/: index.html
0.5.0/search/: search_index.json
0.5.0/usage-guide/configuration/: index.html
0.5.0/usage-guide/format-patterns/: index.html
0.5.0/usage-guide/git-integration/: index.html
0.5.0/why-hyper-bump-it/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/changelog/: index.html
0.5.1/development-guide/: index.html
0.5.1/getting-started/: index.html
0.5.1/usage-guide/configuration/: index.html
0.5.1/usage-guide/format-patterns/: index.html
0.5.1/usage-guide/git-integration/: index.html
0.5.1/why-hyper-bump-it/: index.html
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/changelog/: index.html
0.5.2/development-guide/: index.html
0.5.2/getting-started/: index.html
0.5.2/usage-guide/configuration/: index.html
0.5.2/usage-guide/format-patterns/: index.html
0.5.2/usage-guide/git-integration/: index.html
0.5.2/why-hyper-bump-it/: index.html
0.5.3/: 404.html  index.html  sitemap.xml
0.5.3/changelog/: index.html
0.5.3/development-guide/: index.html
0.5.3/getting-started/: index.html
0.5.3/usage-guide/configuration/: index.html
0.5.3/usage-guide/format-patterns/: index.html
0.5.3/usage-guide/git-integration/: index.html
0.5.3/why-hyper-bump-it/: index.html
bump_it/: _error.py  _files.py
bump_it/_text_formatter/: __init__.py  keys.py  text_formatter.py
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/development-guide/: index.html
dev/getting-started/: index.html
dev/search/: search_index.json
dev/usage-guide/configuration/: index.html
dev/usage-guide/format-patterns/: index.html
dev/usage-guide/git-integration/: index.html
dev/why-hyper-bump-it/: index.html
docker/: devbox.dockerfile  run_tests.sh
docs/: development-guide.md  getting-started.md  index.md  why-hyper-bump-it.md
docs/usage-guide/: configuration.md  format-patterns.md  git-integration.md
hyper_bump_it/: __main__.py  _cli.py  _config.py  _core.py  _error.py  _execution_plan.py  _files.py  _git.py  _keystone_parser.py
hyper_bump_it/_cli/: __init__.py  _init_interactive.py  by.py  common.py  init.py  to.py
hyper_bump_it/_cli/interactive/: __init__.py  file_validation.py  files.py  git.py  prompt.py  top_level.py
hyper_bump_it/_config/: __init__.py  application.py  cli.py  core.py  file.py
hyper_bump_it/_hyper_bump_it/: compat.py  core.py  error.py  execution_plan.py  files.py  planned_changes.py  ui.py  vcs.py  version.py
hyper_bump_it/_hyper_bump_it/cli/: __init__.py  by.py  common.py  init.py  to.py
hyper_bump_it/_hyper_bump_it/config/: __init__.py  application.py  cli.py  core.py  file.py  keystone_parser.py
hyper_bump_it/_text_formatter/: __init__.py  keys.py  text_formatter.py
latest/development-guide/: index.html
latest/getting-started/: index.html
latest/why-hyper-bump-it/: index.html
tests/: conftest.py  git_action_combinations.py  sample_data.py  test_cli.py  test_config.py  test_core.py  test_errors.py  test_execution_plan.py  test_files.py  test_git.py  test_keystone_parser.py  test_text_formatter.py
tests/_hyper_bump_it/: git_action_combinations.py  sample_data.py  test_core.py  test_errors.py  test_execution_plan.py  test_files.py  test_text_formatter.py  test_ui.py  test_vcs.py  test_verison.py
tests/cli/: common.py  test_by.py  test_init.py  test_to.py
tests/config/: test_application.py  test_file.py  test_keystone_parser.py
(+34 files in other folders)
