[project]
name = "hyper-bump-it"
version = "0.4.1"
description = "A version bumping tool"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
dependencies = [
    "GitPython>=3.1.29,<4",
    "tomlkit>=0.11.6,<1.0",
    "typer>=0.9.0,<1.0",
    "pydantic>=1.10.2,<2",
    "rich>=12.6.0,<14",
    "typing-extensions>=4.4.0,<5; python_version < '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "version",
    "bump",
    "command line"
]
authors = [
    {name = "Patrick Lannigan", email = "p.lannigan@gmail.com"}
]

[project.urls]
homepage = "https://github.com/plannigan/hyper-bump-it"
changelog = "https://github.com/plannigan/hyper-bump-it/blob/main/CHANGELOG.md"
issues = "https://github.com/plannigan/hyper-bump-it/issues"

[project.scripts]
hyper-bump-it = "hyper_bump_it._hyper_bump_it.cli:app"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.package-data]
hyper_bump_it = ["py.typed"]

# type checking
[tool.mypy]
files = "hyper_bump_it"
show_error_codes = true
warn_unused_configs = true
pretty = true
strict = true
disallow_any_explicit = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "git.*",
]
implicit_reexport = true

# testing
[tool.pytest.ini_options]
addopts = "--verbose --cov=hyper_bump_it --cov-report xml:/tmp/coverage.xml --cov-report term-missing:skip-covered"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "/tmp/hyper_bump_it_coverage"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# code formatting
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "pyproject.toml"
keystone = true
search_format_pattern = "version = \"{version}\""

[[tool.hyper-bump-it.files]]
file_glob = "hyper_bump_it/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "# Hyper Bump It - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]

## [{version}] - {today}"""

[[tool.hyper-bump-it.files]]
file_glob = ".github/ISSUE_TEMPLATE/bug_report.md"
search_format_pattern = "`hyper-bump-it` Version [e.g. {version}]"
