[build-system]
requires = ["hatchling==1.22.5"]
build-backend = "hatchling.build"


[project]
name = "hyper-bump-it"
version = "0.5.3"
description = "A version bumping tool"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
dependencies = [
    "GitPython>=3.1.35,<4",
    "tomlkit>=0.11.6,<1.0",
    "typer>=0.9.0,<1.0",
    "pydantic>=2.1.0,<3",
    "rich>=12.6.0,<14",
    "typing-extensions>=4.4.0,<5; python_version < '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "version",
    "bump",
    "command line"
]
authors = [
    {name = "Patrick Lannigan", email = "p.lannigan@gmail.com"}
]

[project.urls]
homepage = "https://github.com/plannigan/hyper-bump-it"
changelog = "https://github.com/plannigan/hyper-bump-it/blob/main/CHANGELOG.md"
issues = "https://github.com/plannigan/hyper-bump-it/issues"
documentation = "https://plannigan.github.io/hyper-bump-it"

[project.scripts]
hyper-bump-it = "hyper_bump_it._hyper_bump_it.cli:app"

[tool.hatch.build.targets.sdist]
include = [
    "/hyper_bump_it",
]

# environment management & scripts
[tool.hatch.envs.default]
description = "Test and lint the project code"
dependencies = [
    "bandit==1.7.8",
    "black==24.3.0",
    "coverage==7.4.4",
    "flake8==7.0.0",
    "isort==5.13.2",
    "mypy==1.9.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-freezer==0.4.8",
    "pytest-mock==3.14.0",
    "pdbpp==0.10.3",
]
[tool.hatch.envs.default.scripts]
test-no-cov = "pytest --no-cov {args}"
test = "pytest --cov-report html {args}"
test-ci = "pytest {args}"
typing = "mypy"
_fmt = [
    "black --quiet .",
    "isort .",
]
black-check = "black --check --diff ."
isort-check = "isort --check-only ."
flake8-check = "flake8"
bandit-ci = "bandit --ini .bandit -r ."
bandit-check = "bandit-ci --quiet"
check-strict = [
    "black-check",
    "isort-check",
    "typing",
    "test",
    "flake8-check",
    "bandit-check",
]
check = [
    "_fmt",
    "typing",
    "test",
    "flake8-check",
    "bandit-check",
]
test-docs-examples = [
    "./docker/validate_docs.sh"
]

[tool.hatch.envs.bump]
description = "Release a new version"
detached = true
dependencies = [
    "hyper-bump-it==0.5.2"
]
[tool.hatch.envs.bump.scripts]
it = "hyper-bump-it {args}"

[tool.hatch.envs.docs]
description = "Generate documentation for the project"
dependencies = [
    "mike==2.0.0",
    "markdown-include==0.8.1",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.17",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve --dev-addr=0.0.0.0:8000"


# type checking
[tool.mypy]
files = "hyper_bump_it"
show_error_codes = true
warn_unused_configs = true
pretty = true
strict = true
disallow_any_explicit = true
warn_unreachable = true
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    "git.*",
]
implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# testing
[tool.pytest.ini_options]
addopts = "--cov=hyper_bump_it --cov-report xml:/tmp/coverage.xml --cov-report term-missing:skip-covered"
testpaths = ["tests"]
verbosity_assertions = 2

[tool.coverage.run]
branch = true
data_file = "/tmp/hyper_bump_it_coverage"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# code formatting
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "pyproject.toml"
keystone = true
search_format_pattern = "version = \"{version}\""

[[tool.hyper-bump-it.files]]
file_glob = "hyper_bump_it/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "# Hyper Bump It - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]

## [{version}] - {today}"""

[[tool.hyper-bump-it.files]]
file_glob = ".github/ISSUE_TEMPLATE/bug_report.md"
search_format_pattern = "`hyper-bump-it` Version [e.g. {version}]"
