[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "hyper-bump-it"
version = "0.5.3"
description = "A version bumping tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Patrick Lannigan", email = "p.lannigan@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
]
keywords = [
    "version",
    "bump",
    "command line"
]
dependencies = [
    "GitPython>=3.1.35,<4",
    "tomlkit>=0.11.6,<1.0",
    "typer>=0.9.0,<1.0",
    "pydantic>=2.1.0,<3",
    "rich>=12.6.0,<15",
    "typing-extensions>=4.4.0,<5; python_version < '3.11'",
]

[project.urls]
homepage = "https://github.com/plannigan/hyper-bump-it"
changelog = "https://github.com/plannigan/hyper-bump-it/blob/main/CHANGELOG.md"
issues = "https://github.com/plannigan/hyper-bump-it/issues"
documentation = "https://plannigan.github.io/hyper-bump-it"

[project.scripts]
hyper-bump-it = "hyper_bump_it._hyper_bump_it.cli:app"

[tool.hatch.build.targets.sdist]
include = [
    "/hyper_bump_it",
]

# environment management & scripts
[tool.hatch.envs.default]
installer = "uv"
description = "Test and lint the project code"
dependencies = [
    "coverage==7.13.1",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-freezer==0.4.9",
    "pytest-mock==3.15.1",
    "pdbpp==0.12.0.post1",
    "ruff==0.14.14",
]
[tool.hatch.envs.default.scripts]
test-no-cov = "pytest --no-cov {args}"
test = "pytest --cov-report html {args}"
test-ci = "pytest {args}"
typing = "mypy"
_fmt = [
    "ruff check --fix .",
    "ruff format .",
]
ruff-check = "ruff check hyper_bump_it tests"
ruff-format-check = "ruff format --check hyper_bump_it tests"
check-strict = [
    "ruff-check",
    "ruff-format-check",
    "typing",
    "test",
]
check = [
    "_fmt",
    "typing",
    "test",
]
test-docs-examples = [
    "./docker/validate_docs.sh"
]

[tool.hatch.envs.bump]
installer = "uv"
description = "Release a new version"
detached = true
dependencies = [
    "hyper-bump-it==0.5.3"
]
[tool.hatch.envs.bump.scripts]
it = "hyper-bump-it {args}"

[tool.hatch.envs.docs]
installer = "uv"
description = "Generate documentation for the project"
dependencies = [
    "mike==2.1.3",
    "markdown-include==0.8.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.1",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve --dev-addr=0.0.0.0:8000"

# type checking
[tool.mypy]
files = "hyper_bump_it"
show_error_codes = true
warn_unused_configs = true
pretty = true
strict = true
disallow_any_explicit = true
warn_unreachable = true
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    "git.*",
]
implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# testing
[tool.pytest.ini_options]
addopts = "--verbose --cov=hyper_bump_it --cov-report xml:/tmp/coverage.xml --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "/tmp/hyper_bump_it_coverage"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# linting and formatting with ruff
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise from err - would require refactoring existing exception handling
    "SIM102", # nested if - sometimes clearer to keep separate
    "SIM110", # use any() - sometimes explicit loop is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is standard in pytest
    "B008",  # function calls in defaults - common pattern in test fixtures
]
"hyper_bump_it/_hyper_bump_it/cli/init.py" = ["B006"]  # mutable default for CLI args

[tool.ruff.lint.isort]
known-first-party = ["hyper_bump_it"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "pyproject.toml"
keystone = true
search_format_pattern = "version = \"{version}\""

[[tool.hyper-bump-it.files]]
file_glob = "hyper_bump_it/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "# Hyper Bump It - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]

## [{version}] - {today}"""

[[tool.hyper-bump-it.files]]
file_glob = ".github/ISSUE_TEMPLATE/bug_report.md"
search_format_pattern = "`hyper-bump-it` Version [e.g. {version}]"
